# LocalResearch

./: .gitignore  IndraTimeFormat.md  OpenAPI.yaml  README.md  audiobook_handler.py  calibre_handler.py  document_store.py  gem_backend.py  gem_tester.py  icotq_store.py  icotq_viz.py  iq.py  markdown_handler.py  mcp_client.py  mcp_iq_client.py  mcp_iq_server.py  mcp_server.py  old_OpenAPI.yaml  old_README.md  old_gem_tester.py  old_mcp_client.py  old_research.py  old_vector_store.py  orgmode_handler.py  perf_stats.py  pyproject.toml  research.py  research_console.py  research_defs.py  research_server.py  research_tools.py  search_tools.py  sync_tools.py  text_format.py  time_lines.py  timeline_handler.py  vector_store.py  web_server.py
Attic/: old_gem_backend.py
Attic/web_server/: web_server_config.toml
Attic/web_server/app/: config.py  main.py
static/: client.js  index.html  styles.css  visualization.html
static/css/: styles.css
static/js/: OrbitControls.js  embedding-viz.js
tests/: test_server.py
tty_cl/: led_repl_io.py  led_sdl2_repl_io.py  led_text_repl_io.py  led_zero.py  main.py  pyproject.toml
web_client/: README.md  client.js  index.html  package-lock.json  package.json
web_client/src/: App.tsx  index.css
web_client/src/components/document/: DocumentViewer.tsx
web_client/src/components/layout/: AppLayout.tsx  Sidebar.tsx
web_client/src/components/search/: SearchPane.tsx
web_client/src/components/ui/: button.tsx
web_client/src/components/visualization/: ThreeDView.tsx  (+1 more)
web_client/src/lib/: api.ts  indra_time.ts
web_research_server/: client.js
web_server/: run_server.py  web_server_config.toml
web_server/app/: config.py  main.py
web_server/app/static/: visualization.html
(+3 files in other folders)
