[project]
name = "localresearch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"  # umap bottle-neck
dependencies = [
    "einops>=0.8.1",
    "huggingface-hub[cli]>=0.34.4",
    "indralib>=0.4.3",
    "pillow>=12.0.0",
    "piper-tts>=1.3.0",
    "pymupdf-layout>=1.26.6",
    "pymupdf4llm>=0.0.27",
    "scikit-learn>=1.7.1",
    "sentence-transformers>=5.1.0",
    "umap-learn>=0.5.9.post2",
]

